option(
    'disable_color', type : 'boolean', value : false,
    description : 'Whether to disable builtin color support on terminal' +
        ' output. The builtin color support will auto-detect if stdout/stderr' +
        ' is a color capable terminal, but still allow you to override' +
        ' auto-detection through env vars. Builtin color support is used to' +
        ' print error messages, for instance.'
)
option(
    'enable_tests', type : 'boolean',
    description : 'Whether to build tests (will require more dependencies).'
)
option(
    'enable_http', type : 'boolean', value : false,
    description : 'Whether to build the HTTP module.'
)
